# mchp-fpga-mcp

./: .gitignore  AGENTS.md  DEMO.md  EXTRACTION_STATUS.md  LICENSE  PROJECT_STATE.json  README.md  SPEC.md  claude_desktop_config.json  mcp_server_launcher.sh  pyproject.toml
.claude/: CLAUDE.md
docs/: IMPROVEMENTS_ROADMAP.md  TCL_MONSTER_INTEGRATION.md
docs/sessions/: session_2025-10-28.md
pdfs/: PROJECT_STATE.json  README.md
pdfs/.claude_sessions/: snapshot_20251124_112819.json
scripts/: download_pdfs.py  extract_all_pdfs.py  ingest.py  test_extraction.py  test_indexing.py  test_mcp_stdio.py
src/fpga_rag/: __init__.py  config.py
src/fpga_rag/extraction/: __init__.py  worker.py
src/fpga_rag/indexing/: __init__.py  embedder.py
src/fpga_rag/ingestion/: __init__.py  manifest.py  orchestrator.py
src/fpga_rag/mcp_server/: __init__.py  server.py
src/fpga_rag/server/: __init__.py  app.py
src/fpga_rag/storage/: __init__.py  chroma_adapter.py
src/fpga_rag/utils/: __init__.py  hashing.py  pdf.py  text_cleaning.py  token_counter.py
tests/: test_hashing.py  test_mcp_server.py  test_mcp_tools_manual.py  test_validate_config.py
